<resources>
    <string name="app_name">Luas Segitiga</string>
    <string name="base">Alas</string>
    <string name="hint_alas">Masukan Alas</string>
    <string name="height">Tinggi</string>
    <string name="hint_tinggi">Masukan tinggi</string>
    <string name="calculate">Hitung Luas</string>
    <string name="result" />
    <string name="nama">Muhamad Faisal - 191011401460</string>
</resources>