<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/base"
        android:textColor="#F1F1F1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_alas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_alas"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#F1F1F1"
        android:textColorHint="#78909C" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/height"
        android:textColor="#F1F1F1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_tinggi"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#F1F1F1"
        android:textColorHint="#78909C" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:gravity="center|bottom"
        android:padding="20dp"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textColor="#BFE91E63"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>